added index and js support

--- a/src/Nucs.App/views/index/index.html
+++ b/src/Nucs.App/views/index/index.html
@@ -2,8 +2,9 @@
 <html>
   <head>
     <title>Nucs</title>
+    <script type="text/javascript" src="scripts/nucs.js"></script>    
+    <link rel="stylesheet" type="text/css" href="css/nucs.css" />
   </head>
-
   <body>
     Hello Nucs!!
   </body>
