minor layout stuff

--- a/src/Nucs.App/views/index/index.html
+++ b/src/Nucs.App/views/index/index.html
@@ -6,6 +6,14 @@
     <link rel="stylesheet" type="text/css" href="css/nucs.css" />
   </head>
   <body>
-    Hello Nucs!!
+    <div id="status" class="nucs-status">
+      hey
+    </div>
+    <div id="cmdresults" class="nucs-cmd-results">
+      hi
+    </div>
+    <div class="nucs-cmd-line">
+      <input id="cmdline" type="text" />
+    </div>
   </body>
 </html> 
