--- a/src/Nucs.App/views/index/index.html
+++ b/src/Nucs.App/views/index/index.html
@@ -2,18 +2,31 @@
 <html>
   <head>
     <title>Nucs</title>
+    <script  type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
     <script type="text/javascript" src="scripts/nucs.js"></script>    
     <link rel="stylesheet" type="text/css" href="css/nucs.css" />
+    
+    <script type="text/javascript">
+      function go() {
+        var cmd = $('#cmdline').val();
+        $('<p></p>').append('Executing: ' + cmd).prependTo($('#cmdresults'));
+        $.get('api/plan')
+         .done(function (d) { alert(d); })
+         .fail(function () { alert('failed'); });
+      }
+      
+      function init() {
+        $('#cmdgo').click(go);
+      }
+      
+      $(window).load(init);
+    </script>
   </head>
   <body>
-    <div id="status" class="nucs-status">
-      hey
-    </div>
-    <div id="cmdresults" class="nucs-cmd-results">
-      hi
-    </div>
-    <div class="nucs-cmd-line">
-      <input id="cmdline" type="text" />
+    <div id="status"></div>
+    <div id="cmdresults"></div>
+    <div>
+      <input id="cmdline" type="text" /><button id="cmdgo">Go</button>
     </div>
   </body>
 </html> 
